test_regress/t/t_packed_concat_bad.out
%Warning-WIDTHCONCAT: t/t_packed_concat_bad.v:12:47: Unsized numbers/parameters not allowed in replications.
                                                   : ... note: In instance 't'
   12 |    localparam bit_int_t [1:0] count_bits = {2{$bits(count_t)}};
      |                                               ^~~~~
                      ... For warning description see https://verilator.org/warn/WIDTHCONCAT?v=latest
                      ... Use "/* verilator lint_off WIDTHCONCAT */" and lint_on around source to disable this message.
%Warning-WIDTHCONCAT: t/t_packed_concat_bad.v:13:46: Unsized numbers/parameters not allowed in concatenations.
                                                   : ... note: In instance 't'
   13 |    localparam bit_int_t [1:0] count_bitsc = {$bits(count_t), $bits(count_t)};
      |                                              ^~~~~
%Warning-WIDTHCONCAT: t/t_packed_concat_bad.v:13:60: Unsized numbers/parameters not allowed in replications.
                                                   : ... note: In instance 't'
   13 |    localparam bit_int_t [1:0] count_bitsc = {$bits(count_t), $bits(count_t)};
      |                                                            ^
%Error: Exiting due to
